# integrity-calldata-generator

./: Cargo.toml  README.md
cli/: Cargo.toml  snfoundry.toml  verify.sh
cli/calldata/: .gitignore  contract_address
cli/src/: lib.rs  main.rs  serialize.rs  transform.rs
crates/air/: Cargo.toml
crates/air/src/: public_memory.rs
crates/air/src/layout/: mod.rs
crates/air/src/tests/: public_input.rs
crates/commitment/: Cargo.toml
crates/commitment/src/table/: decommit.rs
crates/commitment/src/vector/: decommit.rs
crates/fri/: Cargo.toml
crates/fri/src/: fri.rs  last_layer.rs  lib.rs
crates/pow/: Cargo.toml
crates/pow/src/: pow.rs
crates/stark/: Cargo.toml
crates/stark/src/: lib.rs  stark.rs
examples/no_std_build/: Cargo.toml
proof_parser/src/: lib.rs  stark_proof.rs
