[package]
name = "swiftness"
description = "Swiftness - Rust CairoVM Verifier implementation"
edition = "2021"
license-file = "LICENSE"
readme = "../README.md"
repository = "https://github.com/iosis-tech/swiftness"
version = "0.1.2"

[dependencies]
anyhow = "1"
cairo-felt = "0.9"
clap = { version = "4.4.4", features = ["derive"] }
itertools = "0.13.0"
num-bigint = "0.4.4"
num-traits = "0.2.19"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
starknet-crypto = { version = "0.7.1", default-features = false }
swiftness_air = { path = "../crates/air", default-features = false, features = [
    "std",
], version = "0.1.2" }
swiftness_commitment = { path = "../crates/commitment", default-features = false, features = [
    "std",
], version = "0.1.2" }
swiftness_fri = { path = "../crates/fri", default-features = false, features = [
    "std",
], version = "0.1.2" }
swiftness_pow = { path = "../crates/pow", default-features = false, features = [
    "std",
], version = "0.1.2" }
swiftness_stark = { path = "../crates/stark", default-features = false, features = [
    "std",
], version = "0.1.2" }
swiftness_proof_parser = { path = "../proof_parser", version = "0.1.2" }
thiserror = "1.0.61"
thiserror-no-std = "2.0.2"
