[package]
name = "swiftness_air"
description.workspace = true
edition.workspace = true
license-file.workspace = true
readme = "README.md"
repository.workspace = true
version.workspace = true

[features]
default = ["std"]
std = [
    "dep:thiserror",
    "swiftness_commitment/std",
    "swiftness_transcript/std",
    "starknet-core/std",
    "starknet-crypto/std",
]
test_fixtures = []

[dependencies]
num-bigint.workspace = true
serde_with.workspace = true
serde.workspace = true
starknet-core.workspace = true
starknet-crypto.workspace = true
starknet-types-core.workspace = true
thiserror = { optional = true, workspace = true }
thiserror-no-std.workspace = true

swiftness_commitment.workspace = true
swiftness_transcript.workspace = true
