[package]
name = "swiftness_commitment"
description.workspace = true
edition.workspace = true
license-file.workspace = true
readme = "README.md"
repository.workspace = true
version.workspace = true

[features]
default = ["std"]
std = [
    "dep:thiserror",
    "swiftness_transcript/std",
    "starknet-crypto/std",
]

[dependencies]
blake2.workspace = true
num-bigint.workspace = true
serde_with.workspace = true
serde.workspace = true
sha3.workspace = true
starknet-core.workspace = true
starknet-crypto.workspace = true
starknet-types-core.workspace = true
thiserror = { optional = true, workspace = true }
thiserror-no-std.workspace = true

swiftness_transcript.workspace = true
