[package]
name = "no_std_build"
version = "0.1.2"
edition = "2021"

[dependencies]
embedded-alloc = "0.6.0"
swiftness_air = { path = "../../crates/air", default-features = false }
swiftness_commitment = { path = "../../crates/commitment", default-features = false }
swiftness_fri = { path = "../../crates/fri", default-features = false }
swiftness_pow = { path = "../../crates/pow", default-features = false }
swiftness_stark = { path = "../../crates/stark", default-features = false }
swiftness_transcript = { path = "../../crates/transcript", default-features = false }

[features]
default = ["keccak_160_lsb"]
keccak_160_lsb = [
    "swiftness_pow/keccak",
    "swiftness_air/keccak_160_lsb",
    "swiftness_fri/keccak_160_lsb",
    "swiftness_stark/keccak_160_lsb",
    "swiftness_commitment/keccak_160_lsb",
]
keccak_248_lsb = [
    "swiftness_pow/keccak",
    "swiftness_air/keccak_248_lsb",
    "swiftness_fri/keccak_248_lsb",
    "swiftness_stark/keccak_248_lsb",
    "swiftness_commitment/keccak_248_lsb",
]
blake2s_160_lsb = [
    "swiftness_pow/blake2s",
    "swiftness_air/blake2s_160_lsb",
    "swiftness_fri/blake2s_160_lsb",
    "swiftness_stark/blake2s_160_lsb",
    "swiftness_commitment/blake2s_160_lsb",
]
blake2s_248_lsb = [
    "swiftness_pow/blake2s",
    "swiftness_air/blake2s_248_lsb",
    "swiftness_fri/blake2s_248_lsb",
    "swiftness_stark/blake2s_248_lsb",
    "swiftness_commitment/blake2s_248_lsb",
]