[package]
name = "no_std_build"
version = "0.1.2"
edition = "2021"

[dependencies]
embedded-alloc = "0.6.0"
swiftness_air = { path = "../../crates/air", default-features = false }
swiftness_commitment = { path = "../../crates/commitment", default-features = false }
swiftness_fri = { path = "../../crates/fri", default-features = false }
swiftness_pow = { path = "../../crates/pow", default-features = false }
swiftness_stark = { path = "../../crates/stark", default-features = false }
swiftness_transcript = { path = "../../crates/transcript", default-features = false }
